<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".cuantoComer">

    <LinearLayout
        android:id="@+id/cabeceraComer"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        tools:ignore="MissingConstraints">
    <ImageView
        android:id="@+id/imgAnimalSelected"
        android:tag="@+id/imgAnimalSelected"
        android:layout_gravity="center|end"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/cat"
        android:tint="@color/blue"
        android:padding="10dp"
        tools:ignore="UseAppTint"
        />

        <TextView
            android:id="@+id/txtAnimalSelected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/strComerGato"
            app:layout_constraintStart_toEndOf="@id/imgAnimalSelected"
            app:layout_constraintTop_toBottomOf="@id/imgAnimalSelected" />
    </LinearLayout>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/formulario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"


        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnCalcular"
        app:layout_constraintEnd_toEndOf="parent">


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nombre"
            android:textSize="30sp"
            tools:layout_editor_absoluteX="106dp"
            tools:layout_editor_absoluteY="496dp" />

        <EditText
            android:id="@+id/editTextText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:text=""
            android:textSize="38sp"
            tools:layout_editor_absoluteX="53dp"
            tools:layout_editor_absoluteY="64dp" />

        <TextView
            android:id="@+id/textErrorNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strErrorNombre"
            android:textSize="20sp"
            android:textColor="@color/red"
            tools:layout_editor_absoluteX="106dp"
            tools:layout_editor_absoluteY="496dp"
            android:visibility="gone"

            />



        <TextView
            android:id="@+id/textEdad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strEdad"
            android:textSize="30sp"
            tools:layout_editor_absoluteX="106dp"
            tools:layout_editor_absoluteY="496dp" />

        <TextView
            android:id="@+id/textErrorEdad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strErrorEdad"
            android:textSize="20sp"
            android:textColor="@color/red"
            tools:layout_editor_absoluteX="106dp"
            tools:layout_editor_absoluteY="496dp"
            android:visibility="gone" />


        <com.google.android.material.slider.RangeSlider
            android:id="@+id/rngAltura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stepSize="1"
            android:valueFrom="0"
            android:valueTo="15" />

        <TextView
            android:id="@+id/textTamaño"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strTamanyo"
            android:textSize="30sp"
            tools:layout_editor_absoluteX="106dp"
            tools:layout_editor_absoluteY="496dp" />

        <TextView
            android:id="@+id/textErrorTamaño"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strErrorTamanyo"
            android:textSize="20sp"
            android:textColor="@color/red"
            tools:layout_editor_absoluteX="106dp"
            tools:layout_editor_absoluteY="496dp"
            android:visibility="gone" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/radio_button_1">

            <RadioButton
                android:id="@+id/rbMini"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/strPerroMini"
                android:textSize="28sp" />

            <RadioButton
                android:id="@+id/rbPequenyo"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/strPerroPequenyo"
                android:textSize="28sp" />

            <RadioButton
                android:id="@+id/rbMediano"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/strPerroMediano"
                android:textSize="28sp" />

            <RadioButton
                android:id="@+id/rbGrande"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/strPerroGrande"
                android:textSize="28sp" />

        </RadioGroup>


    </androidx.appcompat.widget.LinearLayoutCompat>

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strBtnComer"
        tools:layout_editor_absoluteX="147dp"
        tools:layout_editor_absoluteY="358dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/formulario"
        />

</androidx.constraintlayout.widget.ConstraintLayout>